#920 Cut allocation in footer metadata decode
Decoding a wide file's footer allocated some 7.5 bytes for every byte it read —
750 MB of garbage for a 69 MB footer — which makes a metadata read as much a
measurement of the collector as of the parser.

Most of it came from objects the format does not require us to create at all: a
field header per field read, a list header per list, a byte[] copy behind every
string, wrappers around one- and two-element lists, and a FieldPath per column
chunk where a column's path is identical in every row group. Skipping a field
allocated as much as reading one, because the binary case read the value into a
fresh array only to drop it; a footer walk that materializes nothing now
allocates 453 B where it once allocated 131 MB.

The path cache keys on position, as RowGroup.columns is required to follow schema
order, but treats that as a prediction and verifies it against the encoded bytes,
so a file that breaks the ordering decodes correctly and only loses the shortcut.

Content-keyed interning of strings and paths was measured as the alternative and
rejected: it cut allocation further but cost 40-60% more wall-clock, because
hashing and probing a table is a cache miss per string where the decode is
otherwise a sequential scan.